@startuml
'https://plantuml.com/sequence-diagram

title Aether Project

class Users {
    + Integer UserID
    + String Username
    + String Name
    + String Email
    + String Password
    + String Number
    + Datetime created_at
    + Datetime last_login
}

class UserPreferences {
    + Integer UserID
    + varchar Language
    + varchar Timezone
    + varchar Theme
}

class Devices {
    Integer UserID
    + Integer DeviceID
    + Integer DeviceType
    + VarChar DeviceName
}

class Commands {
    + Integer UserID
    + Integer DeviceID
    + VarChar CommandText
    + VarChar CommandResponse
    + Time Timestamp
}

class DeviceTypes {
    + Integer DiveTypeID
    + VarChar DiveType
}

Users "1" --* Commands
Users "1" -- "1" UserPreferences
Users "1" --* Devices
Commands "1" -- "1" Devices
Devices"1" -- "1" DeviceTypes

@enduml